fix layout issues

--- a/src/pages/Products/ProductList.scss
+++ b/src/pages/Products/ProductList.scss
@@ -18,18 +18,18 @@
 
 .products-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
   width: 100%;
   height: 100%;
   align-items: start;
   @include media(desktop-small) {
-    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
   }
   @include media(tablet-large) {
-    grid-template-columns: repeat(auto-fit, minmax(45rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(45rem, 1fr));
   }
   @include media(smartphone) {
-    grid-template-columns: repeat(auto-fit, minmax(50rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(50rem, 1fr));
   }
 }
 
